--- a/c-legacy-releases/2020/10292020.md
+++ b/c-legacy-releases/2020/10292020.md
@@ -147,7 +147,7 @@ ht-degree: 97%
 * 修正將值貼入容器後區段 UI 中斷的問題。(AN-233998)
 * 修正[!UICONTROL 「資料摘要」]工作記錄遺失某些每小時資料的問題。(AN-231776)
 * 修正複製計算量度時發生的問題。這會導致「您沒有存取此量度的權限」錯誤訊息。 (AN-238070)
-* 修正無法對[!UICONTROL 「工作區」][!UICONTROL 「文字」]視覺效果設定正確對齊方式的問題。(AN-238188)
+* 修正無法對[!UICONTROL 「工作區」]&#x200B;[!UICONTROL 「文字」]視覺效果設定正確對齊方式的問題。(AN-238188)
 
 #### 其他 Adobe Analytics 修正項目
 
