--- a/c-legacy-releases/2023/02082023.md
+++ b/c-legacy-releases/2023/02082023.md
@@ -528,7 +528,7 @@ Last updated: **August 9, 2022**
 
 | 功能 | 說明 |
 | ------- | ----------- |
-| [!UICONTROL 行銷活動] | (2 月 6 日版本；Beta 版功能) 現在對您的 [!DNL Google Ads]探索行銷活動提供唯讀同步支援。探索行銷活動具有[!UICONTROL 行銷活動類型]「[!UICONTROL 探索]」、「[!UICONTROL 廣告群組類型][!UICONTROL 探索]」和[!UICONTROL 創意類型]「[!UICONTROL 探索廣告]」(對於單圖廣告) 或「[!UICONTROL 探索輪播廣告]」(對於多圖輪播廣告)。您可以在標準和混合專案組合中包含探索行銷活動。<br><br>報告中提供探索行銷活動的廣告層級資料。對於具有 Adobe Analytics 整合的廣告商，廣告層級資料在 [!DNL Analytics] 報告中提供。 同樣地，[!DNL Analytics] 資料在 [!DNL Search] 中可用；該資料是使用升級後的 `s_kwcid` 追蹤參數傳送的，無論您通常為帳戶使用的 `s_kwcid` 格式為何。如果您通常使用舊版本的 `s_kwcid`，那麼您的點擊次數/成本資料和收入資料會使用不同的 `s_kwcids` 進行追蹤，但兩組資料會完全分類並彙總在相同的行銷活動和帳戶下。 |
+| [!UICONTROL 行銷活動] | (2 月 6 日版本；Beta 版功能) 現在對您的 [!DNL Google Ads]探索行銷活動提供唯讀同步支援。探索行銷活動具有[!UICONTROL 行銷活動類型]「[!UICONTROL 探索]」、「[!UICONTROL 廣告群組類型]&#x200B;[!UICONTROL 探索]」和[!UICONTROL 創意類型]「[!UICONTROL 探索廣告]」(對於單圖廣告) 或「[!UICONTROL 探索輪播廣告]」(對於多圖輪播廣告)。您可以在標準和混合專案組合中包含探索行銷活動。<br><br>報告中提供探索行銷活動的廣告層級資料。對於具有 Adobe Analytics 整合的廣告商，廣告層級資料在 [!DNL Analytics] 報告中提供。 同樣地，[!DNL Analytics] 資料在 [!DNL Search] 中可用；該資料是使用升級後的 `s_kwcid` 追蹤參數傳送的，無論您通常為帳戶使用的 `s_kwcid` 格式為何。如果您通常使用舊版本的 `s_kwcid`，那麼您的點擊次數/成本資料和收入資料會使用不同的 `s_kwcids` 進行追蹤，但兩組資料會完全分類並彙總在相同的行銷活動和帳戶下。 |
 |  | ([!DNL Google Ads] 帳戶：2 月 11 日發行)「[!UICONTROL 目標印象份額]」競標策略的支援現在僅適用於搜尋網路上的行銷活動。對於此競標策略，[!DNL Google Ads] (非 [!DNL Search]) 會優化出價以實現目標印象份額和廣告位置。您可以選擇輸入[!UICONTROL 目標印象份額]百分比、[!UICONTROL 目標廣告位置]和[!UICONTROL 最大 CPC] (每次點按成本)。混合專案組合尚不支援此選項。 |
 | [!UICONTROL Bulksheets] | ([!DNL Microsoft] 行銷活動；2 月 11 日發行) Bulksheets 現在包含「[!UICONTROL 行動號召]」和「[!UICONTROL 行動號召語言]」資料欄多媒體廣告 (採回應式廣告格式)，使用「[!UICONTROL 創作 (RSA 除外)]」資料列。 |
 
