--- a/c-legacy-releases/2023/04122023.md
+++ b/c-legacy-releases/2023/04122023.md
@@ -138,7 +138,7 @@ _在 4 月未更新。_
 
 ### [!DNL Mobile] SDK
 
-已更新：**2022 年 11 月 11 日**- 請查看 [!DNL Adobe Experience Platform][!DNL Mobile SDKs] [發行說明和變更記錄](https://developer.adobe.com/client-sdks/documentation/release-notes/)。
+已更新：**2022 年 11 月 11 日**- 請查看 [!DNL Adobe Experience Platform]&#x200B;[!DNL Mobile SDKs] [發行說明和變更記錄](https://developer.adobe.com/client-sdks/documentation/release-notes/)。
 
 +++
 
