--- a/c-legacy-releases/2023/05102023.md
+++ b/c-legacy-releases/2023/05102023.md
@@ -131,7 +131,7 @@ New videos, tutorials, or courses published for Adobe Experience Platform.-->
 
 ### [!DNL Mobile] SDK
 
-參閱 [!DNL Adobe Experience Platform][!DNL Mobile SDKs] 的[發行說明](https://developer.adobe.com/client-sdks/documentation/release-notes/)。
+參閱 [!DNL Adobe Experience Platform]&#x200B;[!DNL Mobile SDKs] 的[發行說明](https://developer.adobe.com/client-sdks/documentation/release-notes/)。
 
 +++
 
