--- a/c-legacy-releases/2023/06072023.md
+++ b/c-legacy-releases/2023/06072023.md
@@ -217,7 +217,7 @@ New videos, tutorials, or courses published for Adobe [!DNL Real-Time Customer D
 
 | 發佈日期 | 名稱 | 類型 | 說明 |
 | -----------| ---------- | ---------- | ---------- |
-| 2023 年 6 月 | [篩選器概觀](https://experienceleague.adobe.com/docs/customer-journey-analytics-learn/tutorials/components/filters/introduction-to-filters-in-cja.html?lang=zh-Hant) | 影片 | 篩選器會根據屬性和活動 (如網站訪客或客戶服務中心的參與度) 來識別訪客或客戶的子集。了解[!UICONTROL 篩選產生器][!DNL Customer Journey Analytics]的重要元件。 |
+| 2023 年 6 月 | [篩選器概觀](https://experienceleague.adobe.com/docs/customer-journey-analytics-learn/tutorials/components/filters/introduction-to-filters-in-cja.html?lang=zh-Hant) | 影片 | 篩選器會根據屬性和活動 (如網站訪客或客戶服務中心的參與度) 來識別訪客或客戶的子集。了解[!UICONTROL 篩選產生器]&#x200B;[!DNL Customer Journey Analytics]的重要元件。 |
 | 2023 年 6 月 | [在 Analysis Workspace 中將篩選器用作維度](https://experienceleague.adobe.com/docs/customer-journey-analytics-learn/tutorials/components/filters/use-filters-as-dimensions.html?lang=zh-Hant) | 影片 | 了解如何在 Analysis Workspace 專案中將篩選器用作維度時來比較和視覺化篩選器。 |
 
 {style="table-layout:auto"}
