--- a/c-legacy-releases/2023/10042023.md
+++ b/c-legacy-releases/2023/10042023.md
@@ -504,7 +504,7 @@ _已知問題_
 | ----------| ---------- | ---------- | ---------- |---------- |
 | 2023 年 10 月 | 應用程式 | [AEM Assets Sidekick 外掛程式和 Edge Delivery Services](https://experienceleague.adobe.com/docs/experience-manager-learn/assets/edge-delivery-services/sidekick-plugin.html?lang=zh-Hant) | 影片 | 了解如何利用 AEM Assets Sidekick 外掛程式將託管資產加入透過 Edge Delivery Services 提供的高度影響力體驗。 |
 | 2023 年 9 月 | [!DNL AEM as a Cloud Service] | [[!DNL AEM as a Cloud Service] caching](https://experienceleague.adobe.com/docs/experience-manager-learn/cloud-service/caching/overview.html?lang=zh-Hant) | 影片 | 了解關於在 AEM as a Cloud Service 中進行快取。 |
-| 2023 年 9 月 | [!DNL AEM as a Cloud Service] | [內容片段編輯器](https://experienceleague.adobe.com/docs/experience-manager-learn/content-fragments-console/basics/content-fragment-editor.html?lang=zh-Hant) | 影片 | 簡要介紹[!DNL Experience Manager][!UICONTROL 內容片段]編輯器。 |
+| 2023 年 9 月 | [!DNL AEM as a Cloud Service] | [內容片段編輯器](https://experienceleague.adobe.com/docs/experience-manager-learn/content-fragments-console/basics/content-fragment-editor.html?lang=zh-Hant) | 影片 | 簡要介紹[!DNL Experience Manager]&#x200B;[!UICONTROL 內容片段]編輯器。 |
 | 2023 年 9 月 | [!DNL AEM as a Cloud Service] | [架構  [!DNL AEM as a Cloud Service]](https://experienceleague.adobe.com/docs/experience-manager-learn/cloud-service/introduction/architecture.html?lang=zh-Hant) | 影片 | 探索 AEM as a Cloud Service 及 Edge Delivery Services 的基本架構和重要部分。 |
 | 2023 年 9 月 | [!DNL Forms] | [從文件清單中擷取文件](https://experienceleague.adobe.com/docs/experience-manager-learn/forms/custom-workflow-steps/extract-document-from-list.html?lang=zh-Hant) | 文章 | 了解關於自訂工作流程元件以便從文件清單中擷取特定文件。 |
 | 2023 年 9 月 | [!DNL Forms] | [自訂感謝頁面](https://experienceleague.adobe.com/docs/experience-manager-learn/forms/handling-af-form-submissions/thank-you-page-on-fdm-submission.html?lang=zh-Hant) | 文章 | 在感謝頁面中顯示表單資料模型提交的回應。 |
